Applied CSS fixes causing rounded icons buttons to display their inner icons off-center

--- a/frontend/src/components/Chat/CallControls/CallControls.module.scss
+++ b/frontend/src/components/Chat/CallControls/CallControls.module.scss
@@ -2,6 +2,7 @@
   button {
     width: 40px;
     height: 40px;
+    padding: 0px;
     border-radius: 40px;
     margin: 4px;
   }
